--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-crewai>=0.28.8
-langchain-google-genai
-google-generativeai
-python-dotenv
+crewai==0.28.8
+langchain-google-genai==0.0.11
+google-generativeai==0.3.2
+python-dotenv==1.0.0
+fastapi==0.109.1
+uvicorn==0.27.0
+langchain==0.1.0
