--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 crewai==0.28.8
 langchain-google-genai==0.0.11
-google-generativeai==0.3.2
+google-generativeai>=0.4.1
 python-dotenv==1.0.0
 fastapi==0.109.1
 uvicorn==0.27.0
